[package]
name = "genotyping_pipeline"
version = "0.1.0"
edition = "2021"

[lib]
name = "genotyping_pipeline"
path = "src/lib.rs"

[features]
default = []
gpu = []


[dependencies]
byteorder = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
walkdir = "2"
flate2 = { version = "1", features = ["rust_backend"] }
plotters = "0.3"
rand = "0.8"
rayon = "1.10"

# CUDA / cust crates (enabled only when you build with --features gpu)
cust        = { version = "0.3.2", optional = true }
cust_core   = { version = "0.1.1", optional = true }
cust_derive = { version = "0.2.0", optional = true }

cudarc = { version = "0.11.9", default-features = true, features = ["cuda-12050", "nvrtc", "driver"] }
bytemuck = "1.16"
